# poc-dspy

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
docker/: Dockerfile  docker-compose.yaml
notebooks/: getting_started.ipynb  minimal_working_example.ipynb
